--- a/one_hot_encoding.ipynb
+++ b/one_hot_encoding.ipynb
@@ -4,13 +4,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -20,18 +16,22 @@
    "name": "python3"
   },
   "language_info": {
+   "name": "python",
+   "version": "3.10.0",
+   "mimetype": "text/x-python",
+   "file_extension": ".py",
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3"
   }
  },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
+
  "nbformat": 4,
  "nbformat_minor": 5
 }
