--- a/one_hot_encoding.ipynb
+++ b/one_hot_encoding.ipynb
@@ -1,37 +1,335 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 2
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython2",
+      "version": "2.7.6"
+    }
   },
-  "language_info": {
-   "name": "python",
-   "version": "3.10.0",
-   "mimetype": "text/x-python",
-   "file_extension": ".py",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
-}
-
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5,
+  "cells": [
+    {
+      "cell_type": "code",
+      "metadata": {
+        "collapsed": true,
+        "ExecuteTime": {
+          "end_time": "2026-01-10T13:14:27.329143700Z",
+          "start_time": "2026-01-10T13:14:27.248763600Z"
+        }
+      },
+      "source": "import pandas as pd",
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2026-01-10T13:14:27.445071600Z",
+          "start_time": "2026-01-10T13:14:27.382754Z"
+        }
+      },
+      "source": [
+        "d = {'sales': [100000,222000,1000000,522000,111111,222222,1111111,20000,75000,90000,1000000,10000],\n",
+        "'city': ['Tampa','Tampa','Orlando','Jacksonville','Miami','Jacksonville','Miami','Miami','Orlando','Orlando','Orlando','Orlando'],\n",
+        "'size': ['Small', 'Medium','Large','Large','Small','Medium','Large','Small','Medium','Medium','Medium','Small',]}"
+      ],
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2026-01-10T13:14:27.524152Z",
+          "start_time": "2026-01-10T13:14:27.478306600Z"
+        }
+      },
+      "source": "df = pd.DataFrame(d)",
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2026-01-10T13:14:27.580268400Z",
+          "start_time": "2026-01-10T13:14:27.532377900Z"
+        }
+      },
+      "source": "df['city'].unique()",
+      "execution_count": 44,
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array(['Tampa', 'Orlando', 'Jacksonville', 'Miami'], dtype=object)"
+            ]
+          },
+          "execution_count": 44,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2026-01-10T13:14:27.620002600Z",
+          "start_time": "2026-01-10T13:14:27.592490400Z"
+        }
+      },
+      "source": "from sklearn.preprocessing import OneHotEncoder",
+      "execution_count": 45,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2026-01-10T13:14:27.688789100Z",
+          "start_time": "2026-01-10T13:14:27.652721300Z"
+        }
+      },
+      "source": "ohe = OneHotEncoder(handle_unknown ='ignore',sparse_output = False).set_output(transform ='pandas')",
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2026-01-10T13:14:27.737512Z",
+          "start_time": "2026-01-10T13:14:27.688789100Z"
+        }
+      },
+      "source": "ohetransform = ohe.fit_transform(df[['city']])",
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2026-01-10T13:14:27.831508500Z",
+          "start_time": "2026-01-10T13:14:27.737512Z"
+        }
+      },
+      "source": "ohetransform.head()",
+      "execution_count": 48,
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "   city_Jacksonville  city_Miami  city_Orlando  city_Tampa\n",
+              "0                0.0         0.0           0.0         1.0\n",
+              "1                0.0         0.0           0.0         1.0\n",
+              "2                0.0         0.0           1.0         0.0\n",
+              "3                1.0         0.0           0.0         0.0\n",
+              "4                0.0         1.0           0.0         0.0"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>city_Jacksonville</th>\n",
+              "      <th>city_Miami</th>\n",
+              "      <th>city_Orlando</th>\n",
+              "      <th>city_Tampa</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ]
+          },
+          "execution_count": 48,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2026-01-10T13:14:28.150003500Z",
+          "start_time": "2026-01-10T13:14:27.925586Z"
+        }
+      },
+      "source": "df = pd.concat([df,ohetransform],axis=1).drop(columns=[\"city\"])",
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2026-01-10T13:14:28.570723600Z",
+          "start_time": "2026-01-10T13:14:28.437295Z"
+        }
+      },
+      "source": "df.head()",
+      "execution_count": 50,
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "     sales    size  city_Jacksonville  city_Miami  city_Orlando  city_Tampa\n",
+              "0   100000   Small                0.0         0.0           0.0         1.0\n",
+              "1   222000  Medium                0.0         0.0           0.0         1.0\n",
+              "2  1000000   Large                0.0         0.0           1.0         0.0\n",
+              "3   522000   Large                1.0         0.0           0.0         0.0\n",
+              "4   111111   Small                0.0         1.0           0.0         0.0"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>sales</th>\n",
+              "      <th>size</th>\n",
+              "      <th>city_Jacksonville</th>\n",
+              "      <th>city_Miami</th>\n",
+              "      <th>city_Orlando</th>\n",
+              "      <th>city_Tampa</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>100000</td>\n",
+              "      <td>Small</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>222000</td>\n",
+              "      <td>Medium</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1000000</td>\n",
+              "      <td>Large</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>522000</td>\n",
+              "      <td>Large</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>111111</td>\n",
+              "      <td>Small</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ]
+          },
+          "execution_count": 50,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ]
+    }
+  ]
 }
